--- a/button-transitions.html
+++ b/button-transitions.html
@@ -1,7 +1,51 @@
-<html>
-  <div>
-  <button class="button-1">Button 1</button>
-  <button class="button-2">Button 2</button>
-  <button class="button-3">Button 3</button>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Button Transitions</title>
+    <style>
+        body {
+            justify-content: center;
+            align-items: center;
+        }
+        .button-1 {
+            background-color: blue;
+            color: white;
+            padding: 10px 20px;
+        }
+        .button-1:hover {
+            background-color: lightblue;
+            border-color: red;
+        }
+        .button-2 {
+            background-color: red;
+            color: white;
+            padding: 10px 20px;
+        }
+        .button-2:hover {
+            background-color: pink;
+            border-color: yellow;
+        }
+        .button-3 {
+            background-color: green;
+            color: white;
+            padding: 10px 20px;
+        }
+        .button-3:hover {
+            color: black;
+            border-color: black;
+        }
+    </style>
+</head>
+<body>
+
+    <div>
+        <button class="button-1">Button 1</button>
+        <button class="button-2">Button 2</button>
+        <button class="button-3">Button 3</button>
+    </div>
+
+</body>
+
 </html>
