--- a/cards.html
+++ b/cards.html
@@ -8,21 +8,21 @@
 </head>
 <body>
 
-    <div>
+    <div class="container">
         <div class="card">
             <h3>Cookies</h3>
             <p>Bring home a box of our classic chocolate chips cookies.</p>
-            <img src="cookies.jpg">
+            <img src="image1.jpg" alt="cookies">
         </div>
         <div class="card">
             <h3>Donuts</h3>
             <p>Try our world famous donuts. New flavors each week!</p>
-            <img src="donuts.jpg">
+            <img src="image2.jpg" alt="donuts">
         </div>
         <div class="card">
             <h3>Holiday Treats</h3>
             <p>Give the gift of holiday sweets.</p>
-            <img src="holiday_treats.jpg">
+            <img src="image3.jpg" alt="holiday treats">
         </div>
     </div>
 
