--- a/cards.html
+++ b/cards.html
@@ -10,19 +10,25 @@
 
     <div class="container">
         <div class="card">
-            <h3>Cookies</h3>
-            <p>Bring home a box of our classic chocolate chips cookies.</p>
             <img src="image1.jpg" alt="cookies">
+            <div class="intro">
+                <h3>Cookies</h3>
+                <p>Bring home a box of our classic chocolate chips cookies.</p>
+            </div>
         </div>
         <div class="card">
-            <h3>Donuts</h3>
-            <p>Try our world famous donuts. New flavors each week!</p>
             <img src="image2.jpg" alt="donuts">
+            <div class="intro">
+                <h3>Donuts</h3>
+                <p>Try our world famous donuts. <br> New flavors each week!</p>
+            </div>
         </div>
         <div class="card">
-            <h3>Holiday Treats</h3>
-            <p>Give the gift of holiday sweets.</p>
             <img src="image3.jpg" alt="holiday treats">
+            <div class="intro">
+                <h3>Holiday Treats</h3>
+                <p>Give the gift of holiday sweets. 'Tis the season for powdered donuts!</p>
+            </div>
         </div>
     </div>
 
