--- a/animated-objects.html
+++ b/animated-objects.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CSS Animated Objects</title>
+    <link rel="stylesheet" href="animations.css">
+</head>
+<body>
+
+    <section class="animated-icons-container">
+        <div class="animated-icon-1">🔵</div>
+        <div class="animated-icon-2">🟠</div>
+        <div class="animated-icon-3">🟢</div>
+    </section>
+
+</body>
+</html>
 
