--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> 
 <body>
     <a href="animated-objects.html">Go to Animated Objects</a>
+    <a href="scroll-animations.html">Scroll Animations</a>
 </body>
 </html>
 
