--- a/scroll-animations.html
+++ b/scroll-animations.html
@@ -1,5 +1,8 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll Animations</title>
     <link rel="stylesheet" href="scroll.css">
     <script src="js/app.js" defer></script>
@@ -10,25 +13,25 @@
     <section>
       <div class="hidden">
         <h2>First Section</h2>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <img src="https://source.unsplash.com/random/800x400" />
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil voluptatum tenetur itaque non maiores possimus repellat laborum, soluta quia in aliquam animi nisi iusto quae sit! Repellat id ex reprehenderit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur fuga est animi assumenda nobis tempore consequatur rerum. Ea tenetur maiores, explicabo voluptatem id repellat amet, in quod eum accusamus consectetur.</p>
+        <img src="annie-spratt-coIBOiWBPjk-unsplash.jpg" />
       </div>
     </section>
 
     <section>
       <div class="hidden">
         <h2>Second Section</h2>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <img src="https://source.unsplash.com/random/800x400" />
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat fugit voluptate facilis adipisci explicabo et illum quia distinctio, inventore qui totam nam delectus quisquam, quod ea alias nisi provident sunt?</p>
+        <img src="kwang-mathurosemontri-fY1ECB1RCd0-unsplash.jpg" />
       </div>
     </section>
 
     <section>
       <div class="hidden">
         <h2>Third Section</h2>
-        <p>Lorem ipsum dolor sit amet...</p>
-        <img src="https://source.unsplash.com/random/800x400" />
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo tempore, odio et ex repudiandae alias consequatur iusto nostrum voluptatem expedita. Eos iure nihil consequuntur non ipsa consectetur mollitia illum aspernatur.</p>
+        <img src="rebecca-_C9XM02Y5ZE-unsplash.jpg" />
       </div>
     </section>
 
